# bitmatrix

./: Cargo.toml  readme.md
src/: lib.rs  tests.rs
